--- a/index.html
+++ b/index.html
@@ -18,41 +18,160 @@
     <link href="style.css" rel="stylesheet />
   </head>
   <body class="light-mode">
-    <!-- Loader -->
-    <div id="loader">
-      <div class="spinner-border text-dark" role="status">
-        <span class="visually-hidden">Loading...</span>
-      </div>
-    </div>
-
-    <!-- Dark/Light Mode Toggle -->
-    <div class="toggle-switch form-check form-switch">
-      <input class="form-check-input" type="checkbox" id="modeToggle" />
-      <label class="form-check-label" for="modeToggle" id="modeLabel"
-        >Light Mode</label
-      >
-    </div>
-
-    <!-- Hero Parallax -->
-    <section
-      class="parallax d-flex align-items-center justify-content-center"
-      style="
-        background: url('assets/luca-dugaro-tuueCVnYN0s-unsplash.jpg') center
-          center / cover fixed;
-      "
-    >
-      <div class="hero" data-aos="fade-down">
-        <h1>Push the Limits of</h1>
-        <h1 id="dynamic-text"></h1>
-        <button
-          class="btn btn-dark custom-btn mt-4"
-          data-bs-toggle="modal"
-          data-bs-target="#introModal"
+    <div class="site-wrapper">
+      <!-- Dark/Light Mode Toggle -->
+      <div class="toggle-switch form-check form-switch">
+        <input class="form-check-input" type="checkbox" id="modeToggle" />
+        <label class="form-check-label" for="modeToggle" id="modeLabel"
+          >Light Mode</label
         >
-          Learn More
-        </button>
       </div>
-    </section>
+
+      <!-- Hero Parallax -->
+      <section
+        class="parallax d-flex align-items-center justify-content-center"
+        style="
+          background: url('assets/luca-dugaro-tuueCVnYN0s-unsplash.jpg') center
+            center / cover fixed;
+        "
+      >
+        <div class="hero" data-aos="fade-down">
+          <h1>Push the Limits of</h1>
+          <h1 id="dynamic-text"></h1>
+          <button
+            class="btn btn-dark custom-btn mt-4"
+            data-bs-toggle="modal"
+            data-bs-target="#introModal"
+          >
+            Learn More
+          </button>
+        </div>
+      </section>
+
+      <!-- Features Section -->
+      <section class="container py-5" data-aos="fade-up">
+        <h2 class="text-center mb-5">Our Features</h2>
+        <div class="row g-4">
+          <div class="col-md-4" data-aos="flip-left">
+            <div class="card feature-card">
+              <div class="card-body">
+                <h5 class="card-title">Responsive Grid</h5>
+                <p class="card-text">
+                  Built with Bootstrap's powerful grid system.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4" data-aos="flip-left" data-aos-delay="200">
+            <div class="card feature-card">
+              <div class="card-body">
+                <h5 class="card-title">Animations on Scroll</h5>
+                <p class="card-text">
+                  Smooth reveal effects using AOS library.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4" data-aos="flip-left" data-aos-delay="400">
+            <div class="card feature-card">
+              <div class="card-body">
+                <h5 class="card-title">Interactive Forms</h5>
+                <p class="card-text">Engaging input forms with validation.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Carousel Section -->
+      <section class="container-fluid px-0" data-aos="zoom-in">
+        <div id="demoCarousel" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#demoCarousel"
+              data-bs-slide-to="0"
+              class="active"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#demoCarousel"
+              data-bs-slide-to="1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#demoCarousel"
+              data-bs-slide-to="2"
+            ></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img
+                src="assets\ales-nesetril-Im7lZjxeLhg-unsplash.jpg"
+                class="d-block w-100"
+                alt="Tech"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="assets\max-petrunin-dPzF4JbtxC8-unsplash.jpg"
+                class="d-block w-100"
+                alt="Design"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="assets\mike-kononov-lFv0V3_2H6s-unsplash.jpg"
+                class="d-block w-100"
+                alt="Innovation"
+              />
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#demoCarousel"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon"></span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#demoCarousel"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon"></span>
+          </button>
+        </div>
+      </section>
+
+      <!-- Newsletter Form -->
+      <section class="container py-5" data-aos="fade-up">
+        <h2 class="text-center mb-4">Stay Updated</h2>
+        <form class="row g-3 justify-content-center">
+          <div class="col-auto">
+            <label for="emailInput" class="visually-hidden">Email</label>
+            <input
+              type="email"
+              class="form-control"
+              id="emailInput"
+              placeholder="Enter your email"
+            />
+          </div>
+          <div class="col-auto">
+            <button type="submit" class="btn btn-secondary mb-3">
+              Subscribe
+            </button>
+          </div>
+        </form>
+      </section>
+
+      <!-- Footer -->
+      <footer class="text-center py-4" data-aos="fade-in">
+        <p>&copy; 2025 Dash Samari Web Design. All rights reserved.</p>
+      </footer>
+    </div>
 
     <!-- Intro Modal -->
     <div
@@ -89,129 +208,14 @@
           </div>
         </div>
       </div>
+
+      <!-- Loader -->
+      <div id="loader">
+        <div class="spinner-border text-dark" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+      </div>
     </div>
-
-    <!-- Features Section -->
-    <section class="container py-5" data-aos="fade-up">
-      <h2 class="text-center mb-5">Our Features</h2>
-      <div class="row g-4">
-        <div class="col-md-4" data-aos="flip-left">
-          <div class="card feature-card">
-            <div class="card-body">
-              <h5 class="card-title">Responsive Grid</h5>
-              <p class="card-text">
-                Built with Bootstrap's powerful grid system.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4" data-aos="flip-left" data-aos-delay="200">
-          <div class="card feature-card">
-            <div class="card-body">
-              <h5 class="card-title">Animations on Scroll</h5>
-              <p class="card-text">Smooth reveal effects using AOS library.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4" data-aos="flip-left" data-aos-delay="400">
-          <div class="card feature-card">
-            <div class="card-body">
-              <h5 class="card-title">Interactive Forms</h5>
-              <p class="card-text">Engaging input forms with validation.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Carousel Section -->
-    <section class="container-fluid px-0" data-aos="zoom-in">
-      <div id="demoCarousel" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-          <button
-            type="button"
-            data-bs-target="#demoCarousel"
-            data-bs-slide-to="0"
-            class="active"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#demoCarousel"
-            data-bs-slide-to="1"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#demoCarousel"
-            data-bs-slide-to="2"
-          ></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img
-              src="assets\ales-nesetril-Im7lZjxeLhg-unsplash.jpg"
-              class="d-block w-100"
-              alt="Tech"
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              src="assets\max-petrunin-dPzF4JbtxC8-unsplash.jpg"
-              class="d-block w-100"
-              alt="Design"
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              src="assets\mike-kononov-lFv0V3_2H6s-unsplash.jpg"
-              class="d-block w-100"
-              alt="Innovation"
-            />
-          </div>
-        </div>
-        <button
-          class="carousel-control-prev"
-          type="button"
-          data-bs-target="#demoCarousel"
-          data-bs-slide="prev"
-        >
-          <span class="carousel-control-prev-icon"></span>
-        </button>
-        <button
-          class="carousel-control-next"
-          type="button"
-          data-bs-target="#demoCarousel"
-          data-bs-slide="next"
-        >
-          <span class="carousel-control-next-icon"></span>
-        </button>
-      </div>
-    </section>
-
-    <!-- Newsletter Form -->
-    <section class="container py-5" data-aos="fade-up">
-      <h2 class="text-center mb-4">Stay Updated</h2>
-      <form class="row g-3 justify-content-center">
-        <div class="col-auto">
-          <label for="emailInput" class="visually-hidden">Email</label>
-          <input
-            type="email"
-            class="form-control"
-            id="emailInput"
-            placeholder="Enter your email"
-          />
-        </div>
-        <div class="col-auto">
-          <button type="submit" class="btn btn-secondary mb-3">
-            Subscribe
-          </button>
-        </div>
-      </form>
-    </section>
-
-    <!-- Footer -->
-    <footer class="text-center py-4" data-aos="fade-in">
-      <p>&copy; 2025 Dash Samari Web Design. All rights reserved.</p>
-    </footer>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
